--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   padding: 0;
@@ -13,6 +17,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "burtons";
+  src: url("../public/Burtons.otf");
 }
 
 @media (prefers-color-scheme: dark) {
